--- a/src/main/webapp/templates/productsPage.html
+++ b/src/main/webapp/templates/productsPage.html
@@ -1,4 +1,4 @@
-<div class="panel rightPanel">
+<div class="panel rightPanel tab-content">
     <div ui-view="search"></div>
     <div ui-view="products"></div>
     <div ui-view="details"></div>
